colorscheme upd, 3 jokes

--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -2,8 +2,13 @@ $base-font-size: 10px;
 $sans-serif-font-family: 'Lato', sans-serif;
 $serif-font-family: 'Cutive Mono', monospace;
 
-$bg-clr: #f6c89a;
-$accent-clr: #8b2023;
-$text-clr: #2c050b;
+$bg-clr: #323A4F;
+$accent-clr: #4b98d2;
+$text-clr: #E8EEFB;
+$vivid-clr-1: #faef14;
+$vivid-clr-2: #c2a638;
+$vivid-clr-3: #ef3131;
+$vivid-clr-4: #0c0b44;
+
 
 $white: #ffffff;
