--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -46,3 +46,11 @@ body {
   text-align: left;
   width: 100%;
 }
+
+.vivid-clr-1 {
+  color: $vivid-clr-1;
+}
+
+.vivid-clr-2 {
+  color: $vivid-clr-2;
+}
