random joke, no duplicates, message when no more jokes left

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -47,6 +47,12 @@ body {
   width: 100%;
 }
 
+.message {
+  font-size: 2rem;
+  color: $vivid-clr-3;
+  font-family: $sans-serif-font-family;
+}
+
 .vivid-clr-1 {
   color: $vivid-clr-1;
 }
