--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -1,4 +1,8 @@
-$base-font-size: 10px;
+$desktop-font-size: 10px;
+$mobile-font-size: 7px;
+
+$mobile: 767px;
+
 $sans-serif-font-family: 'Lato', sans-serif;
 $serif-font-family: 'Cutive Mono', monospace;
 
@@ -11,3 +15,4 @@ $vivid-clr-3: #ef3131;
 $vivid-clr-4: #0c0b44;
 
 $white: #ffffff;
+$black: #000000;
