--- a/src/styles/button-cta.scss
+++ b/src/styles/button-cta.scss
@@ -3,11 +3,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 48px;
-  width: 120px;
+  min-height: 4.8rem;
+  min-width: 12rem;
   outline: none;
   border: none;
-  border-radius: 40px;
+  border-radius: 5rem;
   background-color: rgba($accent-clr, 0.2);
   color: $white;
   overflow: hidden;
@@ -33,20 +33,15 @@
   }
 
   &__name--alt {
-    transform: translate(-100px, -50%)
+    transform: translate(-15rem, -50%)
   }
 
   &.is-loading {
     .button-cta__name {
-      transform: translate(100px, -50%);
+      transform: translate(15rem, -50%);
     }
     .button-cta__name--alt {
       transform: translate(-50%, -50%);
     }
   }
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
 }
